# talent-cloud

./: .dockerignore  .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.build.yml  docker-compose.prod.yaml  docker-compose.yml  et --hard HEAD@{1}  firebase_credentials.json  index.htm.txt  package-lock.json  package.json  test_yup.js
backend/: .dockerignore  .env  .env.development.gpg  .env.gpg  .env.staging.gpg  .gitignore  Dockerfile  Makefile  REFACTORING_COMPLETE.md  demo_notifications.py  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  test_channel_notifications.py  test_notification_templates.py  test_notifications.py
backend/apps/audit_log/: admin.py  apps.py  constants.py  models.py  urls.py  views.py
backend/apps/authentication/: models.py  serializers.py  urls.py  views.py
backend/celery_app/: celery.py  check_celery_health.py  constants.py
backend/docs/: admin_notification_integration.md  enhanced_skills_api.md  environment_secret.md  job_post_status_management.md  notification_system_guide.md  notification_system_refactoring.md  oauth_review_and_suggestions.md  oauth_security_protections_explained.md  step1_error_handling_fix.md  step2_input_validation.md  step3_csrf_protection.md
backend/main/: __init__.py
backend/scripts/: decrypt_env.sh  decrypt_staging.sh  encrypt_env.sh  setup_dev_env.sh
backend/services/: models.py
backend/tests/: test_oauth_csrf_protection.py  test_oauth_validation.py  test_oauth_views_csrf.py  test_state_validation.py
backend/utils/: response.py
(+934 files in other folders)
