[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.9",
    "celery==5.5.2",
    "channels-redis==4.2.1",
    "channels==4.2.2",
    "daphne==4.2.0",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.4.0",
    "django-filter>=25.2",
    "django-ratelimit==4.1.0",
    "django-redis==6.0.0",
    "django==5.2.6",
    "djangorestframework==3.15.2",
    "drf-spectacular==0.28.0",
    "flower==2.0.1",
    "gunicorn==23.0.0",
    "nltk==3.9.2",
    "pipdeptree==2.24.0",
    "psycopg2-binary==2.9.10",
    "pyjwt==2.7.0",
    "pytest-django==4.10.0",
    "python-decouple==3.8",
    "redis==5.2.1",
    "requests>=2.33.1",
    "ruff>=0.15.9",
    "whitenoise==6.7.0",
]
